# SimpleMailClient

./: .gitignore  CMakeLists.txt  README.md
src/: POP3Client.cpp  SMTPClient.cpp  SocketAPI.cpp  _bootstrap.cpp  test_unit.cpp
src/gui/: AttachmentListWidget.cpp  BoxShadowEffect.cpp  ConfigWidget.cpp  ContentWidget.cpp  MailboxMenu.cpp  MainWindow.cpp  ResourcesCompiler.qrc  SendMenu.cpp
src/include/: AttachmentListWidget.h  Base64.h  BoxShadowEffect.h  ClientMailbox.h  ConfigProvider.h  ConfigWidget.h  ContentWidget.h  Encoder.h  MIMEInterface.h  MIMEParser.h  MailNetworkWrapper.h  MailboxMenu.h  MainWindow.h  POP3Client.h  Parser.h  SMTPClient.h  SendMenu.h  SocketAPI.h  test_unit.h
src/local-client/: ClientMailbox.cpp  ConfigProvider.cpp
src/local-client/mailboxes/user1@abc.com/: .mailboxCfg.json
src/mime-provider/: Base64.cpp  Encoder.cpp  MIMEInterface.cpp  MIMEParser.cpp  Parser.cpp  QuotedPrintable.cpp
